# chunkweaver

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmark/: README.md  export_chunks.py  export_langchain.py  export_legal_chunks.py  llm_judge.py  queries-legal.json
benchmarks/: README.md  needles.json  run_benchmark.py  run_hierarchical.py
benchmarks/corpus/: ccpa_1798.txt  eu_ai_act_2024_1689.txt  eu_gdpr_2016_679.txt  fda_metformin_label.txt  sec_enron_10k_2000.txt
benchmarks/llm_judge/: README.md  export_chunks.py  export_langchain.py  export_legal_chunks.py  llm_judge.py
chunkweaver/: __init__.py  boundaries.py  chunker.py  cli.py  detector_heading.py  detector_table.py  detectors.py  inspect.py  models.py  presets.py  recommend.py  sentences.py
chunkweaver/integrations/: langchain.py  llamaindex.py
docs/: api.md  cookbook.md  faq.md
examples/ml-detectors/: README.md
examples/ml-detectors/clinical_section_detector/: benchmark.py  detector.py  features.py  sample_notes.py  train.py
examples/ml-detectors/ocr_heading_detector/: README.md  augment.py  benchmark.py  detector.py  features.py  sample_docs.py  train.py
experiments/: compare_chunks.py  compare_table_chunks.py  download_10k.py  heading_detector.py  inspect_detections.py  table_detector.py
runs/: llm-judge-cw-vs-langchain.json  llm-judge-cw-vs-naive600.json  llm-judge-expanded-results.json  llm-judge-top3-40q-results.json
tests/: test_boundaries.py  test_chunker.py  test_cli.py  test_customization.py  test_detectors.py  test_edge_cases.py  test_hierarchical.py  test_hierarchical_corpus.py  test_inspect.py  test_langchain.py  test_llamaindex.py  test_overlap.py  test_presets.py  test_recommend.py  test_sentences.py  test_vector_db_integration.py
